working stuff bro

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,11 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        jcenter() {
+            content {
+                includeGroup("com.google.android.exoplayer")
+            }
+        }
+
     }
 }
