--- a/ios/YTAudio.xcodeproj/xcshareddata/xcschemes/YTAudio.xcscheme
+++ b/ios/YTAudio.xcodeproj/xcshareddata/xcschemes/YTAudio.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ytbg.app"
-               BlueprintName = "ytbg"
-               ReferencedContainer = "container:ytbg.xcodeproj">
+               BuildableName = "YTAudio.app"
+               BlueprintName = "YTAudio"
+               ReferencedContainer = "container:YTAudio.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ytbgTests.xctest"
-               BlueprintName = "ytbgTests"
-               ReferencedContainer = "container:ytbg.xcodeproj">
+               BuildableName = "YTAudioTests.xctest"
+               BlueprintName = "YTAudioTests"
+               ReferencedContainer = "container:YTAudio.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ytbg.app"
-            BlueprintName = "ytbg"
-            ReferencedContainer = "container:ytbg.xcodeproj">
+            BuildableName = "YTAudio.app"
+            BlueprintName = "YTAudio"
+            ReferencedContainer = "container:YTAudio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ytbg.app"
-            BlueprintName = "ytbg"
-            ReferencedContainer = "container:ytbg.xcodeproj">
+            BuildableName = "YTAudio.app"
+            BlueprintName = "YTAudio"
+            ReferencedContainer = "container:YTAudio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
